--- a/nginx/etc/nginx/conf.d/default.conf
+++ b/nginx/etc/nginx/conf.d/default.conf
@@ -1,12 +1,12 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+    server_name  example.com;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /usr/share/nginx/html;
+        root   /local/videojs-cors/example.com/public;
         index  index.html index.htm;
     }
 
