rename default.conf -> example.com.conf

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,4 +6,4 @@ services:
       - ${PORT_NGINX:-8000}:80
     volumes:
       - .:/local/videojs-cors
-      - ./nginx/etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/etc/nginx/conf.d/example.com.conf:/etc/nginx/conf.d/example.com.conf
