--- a/nginx/etc/nginx/conf.d/cdn.example.com.conf
+++ b/nginx/etc/nginx/conf.d/cdn.example.com.conf
@@ -5,6 +5,11 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+    add_header Access-Control-Allow-Origin 'https://example.com';
+    add_header Access-Control-Allow-Methods 'POST, GET, OPTIONS';
+    add_header Access-Control-Allow-Headers 'Origin, Authorization, Accept';
+    # add_header Access-Control-Allow-Credentials true;
+
     location / {
         root   /local/videojs-cors/cdn.example.com/public;
         index  index.html index.htm;
