npm install video.js

--- a/example.com/package.json
+++ b/example.com/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "video.js": "^7.14.3"
+  }
 }
