--- a/example.com/package.json
+++ b/example.com/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "example.com",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "My webpack project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "video.js": "^7.14.3"
+  },
+  "devDependencies": {
+    "@webpack-cli/generators": "^2.2.0",
+    "webpack-cli": "^4.7.2"
   }
 }
