--- a/example.com/package.json
+++ b/example.com/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
     "video.js": "^7.14.3"
   },
   "devDependencies": {
