--- a/nginx/etc/nginx/conf.d/example.com.conf
+++ b/nginx/etc/nginx/conf.d/example.com.conf
@@ -10,6 +10,11 @@ server {
         index  index.html index.htm;
     }
 
+    location /dist {
+        root   /local/videojs-cors/example.com/;
+        index  index.html index.htm;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
