--- a/example.com/package.json
+++ b/example.com/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.15.0",
     "babel-loader": "^8.2.2",
+    "style-loader": "^3.2.1",
     "video.js": "^7.14.3"
   },
   "devDependencies": {
